--- a/alembic.ini
+++ b/alembic.ini
@@ -60,7 +60,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-SQLALCHEMY_DATABASE_URL = "mysql+pymysql://user@127.0.0.1:3306/musterm"
+SQLALCHEMY_DATABASE_URL = mysql+pymysql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}
 
 
 [post_write_hooks]
