--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,8 +8,9 @@ services:
     environment:
       - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
       - MYSQL_DATABASE=musterm
+      - MYSQL_PORT=3307
     ports:
-      - 3306:3306
+      - 3306:3307
     healthcheck:
       test: ["CMD-SHELL", "mysql -h 127.0.0.1 -P 3306 -u root -p${DB_PASSWORD} "]
       interval: 3s
