--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     image: mysql:latest
     restart: always
     env_file:
-      - ./.env.prod
+      - ./.env.dev
     environment:
       - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
       - MYSQL_DATABASE=musterm
@@ -12,7 +12,7 @@ services:
     ports:
       - 3306:3307
     healthcheck:
-      test: ["CMD-SHELL", "mysql -h 127.0.0.1 -P 3306 -u root -p${DB_PASSWORD} "]
+      test: ["CMD-SHELL", "mysql -h localhost -P 3306 -u root -p${DB_PASSWORD} "]
       interval: 3s
       timeout: 5s
       retries: 10
@@ -22,9 +22,9 @@ services:
     build: .
     command: fastapi run main.py --port 8001
     volumes:
-      - .:/app/musterm-api
+      - .:/app/mustermAPI
     env_file:
-      - ./.env.prod
+      - ./.env.dev
     ports:
       - 8001:8001
     depends_on:
