--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
     image: mysql:latest
     restart: always
     env_file:
-      - ./.env.dev
+      - ./.env.prod
     environment:
       - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
       - MYSQL_DATABASE=musterm
@@ -24,7 +24,7 @@ services:
     volumes:
       - .:/app/mustermAPI
     env_file:
-      - ./.env.dev
+      - ./.env.prod
     ports:
       - 8001:8001
     depends_on:
